--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.14",
     "geist": "^1.2.1",
+    "lucide-react": "^0.358.0",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "latest",
+    "next-themes": "^0.3.0",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3"
   },
   "devDependencies": {
